--- a/app.properties
+++ b/app.properties
@@ -1,7 +1,7 @@
 user_agent=vitamio_5.0.2_mxl-iptv.tv
-version_code=51
-version_name=2.4.0
-version_news=Novedades de la version 08-Ene-2020.\n\n-Cambio de reproductor interno por ExoPlayer\n-Se eliminan flujos de publicidad\n-Se quita publicidad de la parrilla de canales\n-Se optimiza tiempo de carga de anuncios al cerrar el canal\n-Se elimina funcionalidad de radio\n\n\nNOTA: LA ACTUALIZACION ES OBLIGATORIA YA QUE NO FUNCIONARA LA VERSION ANTERIOR EN UNA SEMANA
+version_code=54
+version_name=2.4.3
+version_news=Novedades de la version 05-Feb-2020.\n\n-Correccion pago licencias por PAYPAL\n-Bug fixes\n\n\nNOTA: LA ACTUALIZACION ES OBLIGATORIA YA QUE NO FUNCIONARA LA VERSION ANTERIOR EN UNA SEMANA
 ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
