MXL MOVIES - version 1.1.1(9)
MXL MOVIES - version 1.1.1(9)

--- a/app.properties
+++ b/app.properties
@@ -5,9 +5,9 @@ version_news=Novedades de la version 05-Feb-2020.\n\n-Correccion pago licencias 
 ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
-version_code_movies=7
-version_name_movies=1.1.0
-version_news_movies=Novedades version 24-Enero-2020.\n\n1. Nuevo reproductor interno.\n\n2. Descarga de contenido (Peliculas y series).\n\n3. Restablecimiento de servidores de fuentes:\n-Powvideo\n-Streamplay\n-Gamovideo\n-Clipwatching.\n\n4. Nuevos servidores de fuentes:\n-Mystream\n-Fastplay\n-Bayfiles, Baystream, Anonfile\n-vidia.\n\n5. Aumento del 500% en tiempo de carga de enlaces.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
+version_code_movies=9
+version_name_movies=1.1.1
+version_news_movies=Novedades version 10-Febrero-2020.\n\n1. Correccion pago licencias por PAYPAL.\n\n2. Ajustes pantalla completa reproductor interno.\n\n3. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
 ruta_apk_movies=https://play.google.com/store/apps/details?id=tv.mxlmovies.app
 ruta_apk_movies_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movies.apk
 ruta_apk_movies_2=http://app.mxl-iptv.tv/mxl-movies.apk
