--- a/app.properties
+++ b/app.properties
@@ -6,8 +6,8 @@ ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
 version_code_movies=9
-version_name_movies=1.1.1
-version_news_movies=Novedades version 10-Febrero-2020.\n\n1. Correccion pago licencias por PAYPAL.\n\n2. Ajustes pantalla completa reproductor interno.\n\n3. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
+version_name_movies=1.1.2
+version_news_movies=Novedades version 9-Mayo-2020.\n\n1. Nuevas fuentes de contenido.\n\n2. Cambio interfaz detalle movies y series.\n\n3. Aumento de rendimiento cargue capitulos.\n\n4. Solo muestra idiomas disponibles en enlaces.\n\n5. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
 ruta_apk_movies=https://play.google.com/store/apps/details?id=tv.mxlmovies.app
 ruta_apk_movies_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movies.apk
 ruta_apk_movies_2=http://app.mxl-iptv.tv/mxl-movies.apk
