ruta_apk_hms y ruta_apk_androidtv
ruta_apk_hms y ruta_apk_androidtv

--- a/app.properties
+++ b/app.properties
@@ -3,6 +3,8 @@ version_code=54
 version_name=2.4.3
 version_news=Novedades de la version 05-Feb-2020.\n\n-Correccion pago licencias por PAYPAL\n-Bug fixes\n\n\nNOTA: LA ACTUALIZACION ES OBLIGATORIA YA QUE NO FUNCIONARA LA VERSION ANTERIOR EN UNA SEMANA
 ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
+ruta_apk_hms=https://appgallery5.huawei.com/#/app/C101891045
+ruta_apk_androidtv=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
 version_code_movies=11
