mxl movies box 1.1.3
mxl movies box 1.1.3

--- a/app.properties
+++ b/app.properties
@@ -4,13 +4,14 @@ version_name=2.4.3
 version_news=Novedades de la version 05-Feb-2020.\n\n-Correccion pago licencias por PAYPAL\n-Bug fixes\n\n\nNOTA: LA ACTUALIZACION ES OBLIGATORIA YA QUE NO FUNCIONARA LA VERSION ANTERIOR EN UNA SEMANA
 ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_hms=https://appgallery5.huawei.com/#/app/C101891045
-ruta_apk_androidtv=https://github.com/mxl-iptv/mxl/blob/master/mxl-tvbox.apk?raw=true
+ruta_apk_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-tvbox.apk
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
 version_code_movies=11
 version_name_movies=1.1.3
 version_news_movies=Novedades version 15-Mayo-2020.\n\n1. Nuevas fuentes de contenido.\n\n2. Cambio interfaz detalle movies y series.\n\n3. Aumento de rendimiento cargue capitulos.\n\n4. Solo muestra idiomas disponibles en enlaces.\n\n5. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
 ruta_apk_movies=https://play.google.com/store/apps/details?id=tv.mxlmovies.app
+ruta_apk_movies_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-moviesbox.apk
 ruta_apk_movies_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movies.apk
 ruta_apk_movies_2=http://app.mxl-iptv.tv/mxl-movies.apk
 pk_mxl_movies=tv.mxlmovies.app
