--- a/app.properties
+++ b/app.properties
@@ -16,5 +16,6 @@ ruta_apk_movies_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movi
 ruta_apk_movies_2=http://app.mxl-iptv.tv/mxl-movies.apk
 pk_mxl_movies=tv.mxlmovies.app
 pk_mxl_iptv=tv.mxliptv.app
+dominio_mxl=https://mxl-iptv.tv/
 dominio_pow=https://powvideo.net
 dominio_stream=https://steamplay.me
