--- a/app.properties
+++ b/app.properties
@@ -1,10 +1,11 @@
 user_agent=vitamio_5.0.2_mxl-iptv.tv
-version_code=56
+version_code=57
 version_name=2.4.6
 version_news=Novedades de la version 05-Ene-2021.\n\n-Nuevo y mejorado reproductor interno(Solucionado problema de audio)\n-El cargue para reproducir canales se aumentó el tiempo\n-Ganar licencias por 1 día viendo videos de recompensa (en ajustes esta la opción)\n-Ajustes de problemas mínimos\n\n\nNOTA: LA ACTUALIZACION ES OBLIGATORIA YA QUE NO FUNCIONARA LA VERSION ANTERIOR EN UNA SEMANA
 ruta_apk=https://play.google.com/store/apps/details?id=tv.mxliptv.app
 ruta_apk_hms=https://appgallery5.huawei.com/#/app/C101891045
-ruta_apk_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-tvbox.apk
+ruta_apk_androidtv=https://app.mxl-iptv.tv/mxl-tvbox.apk
+ruta_apk_androidtv_bk=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-tvbox.apk
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
 version_code_movies=11
