--- a/app.properties
+++ b/app.properties
@@ -8,11 +8,11 @@ ruta_apk_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-tvb
 ruta_apk_androidtv_bk=https://app.mxl-iptv.tv/mxl-tvbox.apk
 ruta_apk_1=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-iptv.apk
 ruta_apk_2=http://app.mxl-iptv.tv/mxl-iptv.apk
-version_code_movies=11
-version_name_movies=1.1.3
-version_code_movies_box=11
-version_name_movies_box=1.1.3
-version_news_movies=Novedades version 15-Mayo-2020.\n\n1. Nuevas fuentes de contenido.\n\n2. Cambio interfaz detalle movies y series.\n\n3. Aumento de rendimiento cargue capitulos.\n\n4. Solo muestra idiomas disponibles en enlaces.\n\n5. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
+version_code_movies=12
+version_name_movies=1.1.4
+version_code_movies_box=12
+version_name_movies_box=1.1.4
+version_news_movies=Novedades version 9-Marzo-2021.\n\n1. Nuevas fuentes de contenido.\n\n2. Pantalla continuar viendo(series).\n\n3. Correccion servidores de video.\n\n4. Correccion marcado de capitulos vistos.\n\n5. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
 ruta_apk_movies=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movies.apk
 ruta_apk_movies_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-moviesbox.apk
 ruta_apk_movies_1=https://play.google.com/store/apps/details?id=tv.mxlmovies.app
