correccion descarga apk movies
correccion descarga apk movies

--- a/app.properties
+++ b/app.properties
@@ -13,7 +13,7 @@ version_name_movies=1.1.4
 version_code_movies_box=12
 version_name_movies_box=1.1.4
 version_news_movies=Novedades version 9-Marzo-2021.\n\n1. Nuevas fuentes de contenido.\n\n2. Pantalla continuar viendo(series).\n\n3. Correccion servidores de video.\n\n4. Correccion marcado de capitulos vistos.\n\n5. Bug fixes.\n\n\n\nNOTA: SE RECOMIENDA ACTUALIZAR YA QUE NO FUNCIONARA LA VERSION ANTERIOR CORRECTAMENTE
-ruta_apk_movies=https://mxl-iptv.tv/
+ruta_apk_movies=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-movies.apk
 ruta_apk_movies_androidtv=https://raw.githubusercontent.com/mxl-iptv/mxl/master/mxl-moviesbox.apk
 ruta_apk_movies_1=https://play.google.com/store/apps/details?id=tv.mxlmovies.app
 ruta_apk_movies_2=http://app.mxl-iptv.tv/mxl-movies.apk
